--- a/streaming_movies.html
+++ b/streaming_movies.html
@@ -7,15 +7,15 @@
   </head>
   <body>
     <article>
-          <h1><strong>different streaming services</strong></h1>
+          <h1><strong>Different Streaming Services</strong></h1>
       <section>
         <a href="netflix.html">Netflix</a>
+        <br></br>
+       <a href="amazon_Prime.html">Amazon Prime Video</a>
       </section>
 
 
         <section>
-          <h1>
-          <p><a href="https://www.amazon.de/gp/video/offers/ref=dvm_de_sl_ambr%7Cc_270736862567_m_ICOwGmH5-dc_s_/258-2841408-9578539">Ask Dr. Google</a></p>
         </section>
     </article>
   </body>
