--- a/netflix.html
+++ b/netflix.html
@@ -7,8 +7,14 @@
   </head>
   <body>
     <article>
-
       <section>
+        <section>
+          <li><a href="MainPage.html">Home</a></li>
+          <li><a href="netflix.html">Netflix</a></li>
+          <li><a href="amazon_Video.html">Amazon Video</a></li>
+          <li><a href="#about">About</a></li>
+        </section>
+        <br></br>
         <img src="https://mbtskoudsalg.com/images/netflix-logo-png-transparent-background-2.png" style="width:150px;height:150px;">
         <section>
           <p>Netflix is an American media services provider, headquartered in Los Gatos, California. Founded in 1997 by Reed Hastings and Marc Randolph in Scotts Valley, California, the company's primary business is its subscription-based streaming media service, which offers online streaming of a library of films and television programs including those produced in-house. As of July 2018, Netflix has 130 million total subscribers worldwide, including 57.38 million in the United States. It is available worldwide except Mainland China, Syria, North Korea and Crimea. Netflix also has offices in the Netherlands, Brazil, India, Japan, and South Korea.
@@ -17,6 +23,8 @@
           resulted in the company racking up billions in debt: $21.9 billion as of September 2017, up from $16.8 billion from the previous year. $6.5 billion of this is long-term debt, while the remaining are long-term obligations. As of 2018, Netflix has suggested rolling out ads on its platform. This change has been controversial and heavily disputed.</p>
           <section>
           <a href="https://www.netflix.com/at/">Netflix</a>
+
+          <a href="MainPage.html">Zurück</a>
           </section>
 
         </section>
