--- a/MainPage.html
+++ b/MainPage.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
@@ -16,4 +16,36 @@
       </section>
     </article>
   </body>
+</html>-->
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="MainPage.css">
+  <title>Streaming Movies</title>
+</head>
+<body>
+
+<div class="header">
+  <h1>Streaming Movies</h1>
+  <p>Different Streaming platforms explained</p>
+</div>
+
+<div class="topnav">
+  <a href="MainPage.css">Home</a>
+  <a href="amazon_Video.html">Amazon Prime Video</a>
+  <a href="netflix.html">Netflix</a>
+  <a href="" style="float:right">About</a>
+</div>
+
+<div class="row">
+  <div class="leftcolumn">
+    <div class="card">
+      <h2>Streaming</h2>
+      <h5>History</h5>
+      <p></p>
+      <p></p>
+    </div>
+  </div>
+</body>
 </html>
