--- a/MainPage.html
+++ b/MainPage.html
@@ -1,22 +1,3 @@
-<!--<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="MainPage.css">
-    <title>Streaming Movies</title>
-  </head>
-  <body>
-    <article>
-          <h1><strong>Different Streaming Services</strong></h1>
-      <section>
-          <li><a href="MainPage.html">Home</a></li>
-          <li><a href="netflix.html">Netflix</a></li>
-          <li><a href="amazon_Video.html">Amazon Video</a></li>
-          <li><a href="#about">About</a></li>
-      </section>
-    </article>
-  </body>
-</html>-->
 <!DOCTYPE html>
 <html>
 <head>
@@ -32,10 +13,10 @@
 </div>
 
 <div class="topnav">
-  <a href="MainPage.css">Home</a>
+  <a href="MainPage.html">Home</a>
   <a href="amazon_Video.html">Amazon Prime Video</a>
   <a href="netflix.html">Netflix</a>
-  <a href="" style="float:right">About</a>
+  <a href="historyOfStreaming.html">Streaming</a>
 </div>
 
 <div class="row">
@@ -43,9 +24,11 @@
     <div class="card">
       <h2>Streaming</h2>
       <h5>History</h5>
-      <p></p>
-      <p></p>
+      <p>Streaming Media refers to the simultaneous transmission and playback of video
+        and audio data over a computer network.</p>
+      <p><a href="historyOfStreaming.html">more</a></p>
     </div>
   </div>
+
 </body>
 </html>
