--- a/netflix.html
+++ b/netflix.html
@@ -10,11 +10,11 @@
           <li><a href="MainPage.html">Home</a></li>
           <li><a href="netflix.html">Netflix</a></li>
           <li><a href="amazon_Video.html">Amazon Video</a></li>
-          <li><a href="#about">About</a></li>
+          <li><a href="historyOfStreaming.html">Streaming</a></li>
       </div>
         <br></br>
-        <img src="netflix-logo.jpg" style="width:280px;height:150px;">
         <div class ="htext">
+          <h2>Netflix</h2>
           <p>Netflix is an American media services provider, headquartered in Los Gatos, California. Founded in 1997 by Reed Hastings and Marc Randolph in Scotts Valley, California, the company's primary business is its subscription-based streaming media service, which offers online streaming of a library of films and television programs including those produced in-house. As of July 2018, Netflix has 130 million total subscribers worldwide, including 57.38 million in the United States. It is available worldwide except Mainland China, Syria, North Korea and Crimea. Netflix also has offices in the Netherlands, Brazil, India, Japan, and South Korea.
           Netflix's initial business model included DVD sales and rental by mail. Hastings jettisoned DVD sales about a year after Netflix's founding to focus on the DVD rental business. In 2007, Netflix expanded its business with the introduction of streaming media, while retaining the DVD and Blu-ray rental service. The company expanded internationally, with streaming made available to Canada in 2010 and Latin America and the Caribbean thereafter. Netflix entered the content-production industry in 2012, debuting its first series, Lilyhammer.
           It has greatly expanded the production and distribution of both film and television series since 2012, and offers a variety of "Netflix Original" content through its online library. By January 2016, Netflix services operated in over 190 countries. Netflix released an estimated 126 original series and films in 2016, more than any other network or cable channel.[ Their efforts to produce new content, secure the rights for additional content, and diversify through 190 countries have
