information almost done

--- a/MainPage.html
+++ b/MainPage.html
@@ -6,29 +6,35 @@
   <title>Streaming Movies</title>
 </head>
 <body>
+  <article>
 
-<div class="header">
-  <h1>Streaming Movies</h1>
-  <p>Different Streaming platforms explained</p>
-</div>
-
-<div class="topnav">
-  <a href="MainPage.html">Home</a>
-  <a href="amazon_Video.html">Amazon Prime Video</a>
-  <a href="netflix.html">Netflix</a>
-  <a href="historyOfStreaming.html">Streaming</a>
-</div>
-
-<div class="row">
-  <div class="leftcolumn">
-    <div class="card">
-      <h2>Streaming</h2>
-      <h5>History</h5>
-      <p>Streaming Media refers to the simultaneous transmission and playback of video
-        and audio data over a computer network.</p>
-      <p><a href="historyOfStreaming.html">more</a></p>
+    <div class="header">
+      <h1>Streaming Movies</h1>
+        <p>Different Streaming platforms explained</p>
     </div>
-  </div>
+  </article>
 
+  <article>
+    <div class="topnav">
+      <a href="MainPage.html">Home</a>
+      <a href="amazon_Video.html">Amazon Prime Video</a>
+      <a href="netflix.html">Netflix</a>
+      <a href="historyOfStreaming.html">Streaming</a>
+    </div>
+  </article>
+  
+  <article>
+    <div class="row">
+      <div class="leftcolumn">
+        <div class="card">
+          <h2>Streaming</h2>
+          <h5>History</h5>
+          <p>Streaming Media refers to the simultaneous transmission and playback of video
+             and audio data over a computer network.</p>
+             <p><a href="historyOfStreaming.html">more</a></p>
+        </div>
+      </div>
+    </div>
+</article>
 </body>
 </html>
