--- a/historyOfStreaming.html
+++ b/historyOfStreaming.html
@@ -19,13 +19,11 @@
   <section>
     <div class= "text">
       <h1>What is streaming?</h1>
-        Streaming Media refers to the simultaneous transmission and playback of video
+        <p>Streaming Media refers to the simultaneous transmission and playback of video
         and audio data over a computer network. The process of data transmission itself
         is called streaming, and transmitted ("streamed") programs are referred to as
-        livestream or short stream
-  </section>
+        livestream or short stream.</p>
 
-  <section>
     <h2>Types of Streaming</h2>
       <h3><ul><li>On-Demand-Streaming</li></ul></h3>
         <p>On-demand streaming transfers data stored on a server over the network to a client.
@@ -34,8 +32,7 @@
           The client can start the stream while data is being transferred or
           before the entire file has been transferred. Playback delay plays a role here,
           which means that control commands should be executed within 1 to 10 seconds.</p>
-  </section>
-  <section>
+
     <h3><ul><li>Live-Streaming</li></ul></h3>
       <p>Live streaming is a streaming media offering (video or audio) provided in real time.
         The signal is often digitally converted by means of an encoder software and can thus
@@ -44,9 +41,7 @@
         Live streaming is not synonymous with the transmission of live webcam images on a web page.
         In the case of the latter, a still image, for example a webcam, is loaded onto a web server
         via FTP only at a certain distance.In contrast to live streaming is the on-demand streaming.</p>
-  </section>
 
-  <section>
     <h2>Video-containerformats</h2>
       <h3>What is a Containerformat</h3>
         <p>A container format (from English container 'container') specifies in information technology
@@ -60,16 +55,12 @@
           ontainer formats, especially for the common storage of the image and sound data of a movie in a
           single stream, are MP4 (file extension .mp4), Matroska (.mkv, .mka), DivX (.divx) and the outdated AVI (.avi).</p>
 
-  </section>
-
   <h4>Different types of video-containerformats</h4>
 
-  <section>
       <h4><ul><li>Flash Video .flv</li></ul></h4>
         <p>Flash Video (FLV) is an open container format developed by Adobe Systems that is primarily used for Internet video
           content transfer. Depending on the codec used, it is compatible with Adobe Flash players from version 6 or 7 (see below).</p>
-  </section>
-  <section>
+
       <h4><ul><li>MP4 .mp4</li></ul></h4>
         <p>MP4 is a video container format provided by MPEG for MPEG-4 content.
           The MP4 file format is based on the Apple QuickTime file format. Both formats organize media data in hierarchical and sequential data units.
@@ -77,7 +68,7 @@
           different media types and save them with structural information and their dependencies.MP4 files can store multimedia content in the form of
           multiple audio and video tracks as well as subtitles, 2D and 3D graphics. This content can then be played locally using appropriate software
           or streamed over a network.</p>
-  </section>
+
       <h4><ul><li>MOV .mov</li></ul></h4>
         <p>MOV is a file format made especially for the QuickTime Player. That means it works perfectly on Macs.
           The MOV format was developed by Apple Inc. Later, the largely MP-based MP4 became the international standard.
@@ -86,9 +77,7 @@
           applications, so it can also be used to transfer files.MOV is suitable for video editing and Internet broadcasting
           because it can customize the primary elements individually.In MOV files, multiple tracks are stored independently.
           Thus, the sound, the image quality or the image resolution can be changed individually, which makes the editing very easy.</p>
-  </section>
 
-  <section>
     <li><strong>Advantages:</strong></li>The MOV files can be played in different system
         environments due to their high compatibility and require only a small memory space.
         They can be used by many different operating systems, including Mac, Windows, iOS and Android.
@@ -98,9 +87,7 @@
         <li><strong>Disadvantages:</strong></li> MOV uses lossy compression for the video tracks, which means that the video quality is not as high as the original video.
           In addition, every track (audio, video, text) of the MOV file is encoded with a special codec. An application to play the file must therefore
           know all these codecs to be able to play them gently and without jerking.
-  </section>
 
-  <section>
     <h2>Timeline</h2>
      <h3>1995 - 2004 </h3>
       <p>Early days of the world wide web. Several container formats for streaming the first videos are released.
@@ -118,7 +105,7 @@
              Many social media startups integrate the streaming of short segments of video, like Vine and Keek. These are, in turn, integrated
              into the most popular services like Instagram and Facebook.
           </p>
-  </section>
+      </section>
     </div>
   </article>
 </body>
