--- a/historyOfStreaming.html
+++ b/historyOfStreaming.html
@@ -25,26 +25,26 @@
         livestream or short stream.</p>
 
     <h2>Types of Streaming</h2>
-      <h3><ul><li>On-Demand-Streaming</li></ul></h3>
-        <p>On-demand streaming transfers data stored on a server over the network to a client.
+      <dl><dt><h3>On-Demand-Streaming</h3></dt>
+        <dd><p>On-demand streaming transfers data stored on a server over the network to a client.
           The client can pause, fast-forward, and rewind playback.
           The data is pre-stored on the client side in a media buffer.
           The client can start the stream while data is being transferred or
           before the entire file has been transferred. Playback delay plays a role here,
-          which means that control commands should be executed within 1 to 10 seconds.</p>
+          which means that control commands should be executed within 1 to 10 seconds.</p></dd>
 
-    <h3><ul><li>Live-Streaming</li></ul></h3>
-      <p>Live streaming is a streaming media offering (video or audio) provided in real time.
+    <h3><dt>Live-Streaming</dt></h3>
+      <dd><p>Live streaming is a streaming media offering (video or audio) provided in real time.
         The signal is often digitally converted by means of an encoder software and can thus
         be transmitted via a digital transmission channel (eg the Internet). Depending on the
         degree of compression and transmission quality different streaming codecs are used.
         Live streaming is not synonymous with the transmission of live webcam images on a web page.
         In the case of the latter, a still image, for example a webcam, is loaded onto a web server
-        via FTP only at a certain distance.In contrast to live streaming is the on-demand streaming.</p>
+        via FTP only at a certain distance.In contrast to live streaming is the on-demand streaming.</p></
 
     <h2>Video-containerformats</h2>
-      <h3>What is a Containerformat</h3>
-        <p>A container format (from English container 'container') specifies in information technology
+      <h3><dt>What is a Containerformat</dt></h3>
+        <dd><p>A container format (from English container 'container') specifies in information technology
           a data structure with which individual data streams of possibly different formats can be
           merged to form a data stream (for example a container file) (multiplexing). The possibilities
           of different container formats are very different. The simplest case is to combine several
@@ -53,60 +53,68 @@
           combine video data with audio data to make a playable movie or combine textual information with
           images and other information that they have Composite document. Well-known and often used media c
           ontainer formats, especially for the common storage of the image and sound data of a movie in a
-          single stream, are MP4 (file extension .mp4), Matroska (.mkv, .mka), DivX (.divx) and the outdated AVI (.avi).</p>
+          single stream, are MP4 (file extension .mp4), Matroska (.mkv, .mka), DivX (.divx) and the outdated AVI (.avi).</p></dd></dl>
 
-  <h4>Different types of video-containerformats</h4>
+  <dl><h4>Different types of video-containerformats</h4>
 
-      <h4><ul><li>Flash Video .flv</li></ul></h4>
-        <p>Flash Video (FLV) is an open container format developed by Adobe Systems that is primarily used for Internet video
-          content transfer. Depending on the codec used, it is compatible with Adobe Flash players from version 6 or 7 (see below).</p>
+    <table class="VideoContainerFormatsTable">
+      <thead>
+        <tr><th colspan= "3">Video-Containerformats</tr>
+        <tr></tr>
+      </thead>
+    </table>
+    
+      <dt><h4>Flash Video .flv</h4></dt>
+        <dd><p>Flash Video (FLV) is an open container format developed by Adobe Systems that is primarily used for Internet video
+          content transfer. Depending on the codec used, it is compatible with Adobe Flash players from version 6 or 7 (see below).</p></dd>
 
-      <h4><ul><li>MP4 .mp4</li></ul></h4>
-        <p>MP4 is a video container format provided by MPEG for MPEG-4 content.
+      <dt><h4>MP4 .mp4</h4></dt>
+        <dd><p>MP4 is a video container format provided by MPEG for MPEG-4 content.
           The MP4 file format is based on the Apple QuickTime file format. Both formats organize media data in hierarchical and sequential data units.
           These units are called "atoms," and their TYPE identifiers (moov, trak, mdia, minf, stbl, etc.) are identical. You can record a variety of
           different media types and save them with structural information and their dependencies.MP4 files can store multimedia content in the form of
           multiple audio and video tracks as well as subtitles, 2D and 3D graphics. This content can then be played locally using appropriate software
-          or streamed over a network.</p>
+          or streamed over a network.</p></dd>
 
-      <h4><ul><li>MOV .mov</li></ul></h4>
-        <p>MOV is a file format made especially for the QuickTime Player. That means it works perfectly on Macs.
+      <dt><h4>MOV .mov</h4></dt>
+        <dd><p>MOV is a file format made especially for the QuickTime Player. That means it works perfectly on Macs.
           The MOV format was developed by Apple Inc. Later, the largely MP-based MP4 became the international standard.
           MOV and MP4 have many things in common. Both use the MPEG 4 codec for compression and are therefore interchangeable
           in the Apple QuickTime environment.  MOV is a widely used format today that is supported by many computers and
           applications, so it can also be used to transfer files.MOV is suitable for video editing and Internet broadcasting
           because it can customize the primary elements individually.In MOV files, multiple tracks are stored independently.
-          Thus, the sound, the image quality or the image resolution can be changed individually, which makes the editing very easy.</p>
+          Thus, the sound, the image quality or the image resolution can be changed individually, which makes the editing very easy.</p></dd>
 
-    <li><strong>Advantages:</strong></li>The MOV files can be played in different system
+        <dd><strong>Advantages:</strong>The MOV files can be played in different system
         environments due to their high compatibility and require only a small memory space.
-        They can be used by many different operating systems, including Mac, Windows, iOS and Android.
+        They can be used by many different operating systems, including Mac, Windows, iOS and Android.</dd>
 
         <p></p>
 
-        <li><strong>Disadvantages:</strong></li> MOV uses lossy compression for the video tracks, which means that the video quality is not as high as the original video.
+          <dd><strong>Disadvantages:</strong></li> MOV uses lossy compression for the video tracks, which means that the video quality is not as high as the original video.
           In addition, every track (audio, video, text) of the MOV file is encoded with a special codec. An application to play the file must therefore
-          know all these codecs to be able to play them gently and without jerking.
-
+          know all these codecs to be able to play them gently and without jerking.</dd></dl>
+   <dl>
     <h2>Timeline</h2>
-     <h3>1995 - 2004 </h3>
-      <p>Early days of the world wide web. Several container formats for streaming the first videos are released.
+     <dt><h3>1995 - 2004 </h3></dt>
+      <dd><p>Early days of the world wide web. Several container formats for streaming the first videos are released.
          Some sites, like Newgrounds, heavily rely on these container formats to display online video.
-          </p>
+       </p></dd>
 
-     <h3>2005 - 2010</h3>
-          <p>Mass-streaming services like YouTube and Netflix become massively popular for streaming online video.
+     <dt><h3>2005 - 2010</h3></dt>
+          <dd><p>Mass-streaming services like YouTube and Netflix become massively popular for streaming online video.
             Broadband penetration increases, allowing significant fractions of the population to stream online video.
             Macromedia Flash is the most popular format for displaying online video, as it is used by YouTube and many other sites.
-          </p>
+          </p></dd>
 
-     <h3>2011 - 2016</h3>
-          <p>HTML5 starts to displace Flash. Livestreaming becomes increasingly popular, especially in the form of services like Twitch.tv.
+     <dt><h3>2011 - 2016</h3></dt>
+          <dd><p>HTML5 starts to displace Flash. Livestreaming becomes increasingly popular, especially in the form of services like Twitch.tv.
              Many social media startups integrate the streaming of short segments of video, like Vine and Keek. These are, in turn, integrated
              into the most popular services like Instagram and Facebook.
-          </p>
-      </section>
+          </p></dd>
+        </dl>
     </div>
+  </section>
   </article>
 </body>
 </html>
